<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="amount_borrowed">Amount Borrowed ($)</string>
    <string name="interest_rate">Interest Rate (APR)</string>
    <string name="loan_term">Loan Term (yrs)</string>
    <string name="taxes_insurance">Taxes and Insurance</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="calculate">Calculate</string>
    <string name="include_montly_payment">Include in monthly payment</string>
    <string name="loan_term1">7</string>
    <string name="loan_term2">15</string>
    <string name="loan_term3">30</string>
    <string name="seek_label_min">0</string>
    <string name="seek_label_max">10</string>
    <string name="seek_label_default">5</string>
    <string name="seek_label_progress_val">5%</string>
    <string name="radio_error_mssg">Please select loan term. </string>
    <string name="amtBorrowed_error_mssg">Please enter a valid amount. </string>

</resources>
