<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"

    tools:context="com.example.pallavi.hw1.MortgageCalculator"
    tools:showIn="@layout/activity_mortgage_calculator">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_borrowed"
        android:id="@+id/label_amtBorrowed"
        android:textColor="#7f00ff"
        android:textStyle="bold|italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amtBorrowed"
        android:singleLine="true"
        android:layout_below="@id/label_amtBorrowed"
        android:numeric="decimal"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_rate"
        android:id="@+id/label_interestRate"
        android:layout_below="@+id/amtBorrowed"
        android:textColor="#7f00ff"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interestRate"
        android:max="100"
        android:progress="50"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/label_interestRate"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_label_progress_val"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/interestRateValue"
        android:layout_below="@+id/amtBorrowed"
        android:textColor="#ffffff"
        android:layout_toRightOf="@+id/label_interestRate"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_label_min"
        android:id="@+id/label_0"
        android:layout_below="@+id/interestRate"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-4dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_label_default"
        android:id="@+id/label_val"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/interestRate"
        android:textColor="#ffffff"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_label_max"
        android:id="@+id/label_10"
        android:layout_alignRight="@+id/label_loanTerm"
        android:layout_alignEnd="@+id/label_loanTerm"
        android:layout_below="@+id/interestRate"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loan_term"
        android:id="@+id/label_loanTerm"
        android:layout_below="@+id/label_0"
        android:textColor="#7f00ff"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupLoanterm"
        android:layout_below="@+id/label_loanTerm">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term1"
            android:textColor="#ffffff"
            android:id="@+id/term1"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term2"
            android:textColor="#ffffff"
            android:id="@+id/term2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term3"
            android:textColor="#ffffff"
            android:id="@+id/term3" /></RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxes_insurance"
        android:id="@+id/label_taxes"
        android:layout_below="@+id/radioGroupLoanterm"
        android:textColor="#7f00ff"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_montly_payment"
        android:textColor="#ffffff"
        android:id="@+id/taxes"
        android:layout_below="@+id/label_taxes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/calculate"
        android:textColor="#ffffff"
        android:background="@drawable/button_bg"
        android:layout_below="@+id/taxes"
        android:layout_toRightOf="@+id/label_taxes"
        android:layout_toEndOf="@+id/label_taxes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_payment"
        android:id="@+id/label_monthlyPayment"
        android:layout_below="@+id/calculate"
        android:textColor="#7f00ff"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/monthlyPayment"
        android:layout_below="@+id/label_monthlyPayment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />



</RelativeLayout>
